[gd_scene load_steps=4 format=3 uid="uid://dmo02hsleajx4"]

[ext_resource type="Script" path="res://scripts/ui/gameplay/PauseMenu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.168627, 0.372549, 0.635294, 1)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Shader" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1")

[node name="MainPane" type="Control" parent="."]
anchors_preset = 0
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.7

[node name="Background" type="Panel" parent="MainPane"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("2")

[node name="Contents" type="Control" parent="MainPane"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Title" type="Label" parent="MainPane/Contents"]
layout_mode = 0
text = "PAUSE MENU"

[node name="LeaveMatchButton" type="Button" parent="MainPane/Contents"]
layout_mode = 0
anchor_left = 0.9
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
text = "Return to Lobby"

[node name="DebugToggle" type="CheckButton" parent="MainPane/Contents"]
layout_mode = 0
anchor_top = 0.9
anchor_right = 0.1
anchor_bottom = 1.0
text = "Debug Overlay"
